<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
        <!-- the top navigation section starts here -->
		<!-- top navigation ends here -->
		
		<!-- Add the linear layout code here to manage the login and password  -->
		<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="30dip"
		android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
	   	android:background="@drawable/backgnd_rounded" 
		>
		<TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
           
         <TableRow >
			<FrameLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:padding="10dip"
		    >
		    
			<EditText
	        android:id="@+id/editText1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="140dp" 
	        android:hint="@string/hintyoudomain"
	        android:background="@null"/>
	       
	       	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:paddingLeft="5dp"
	        android:text="@string/email"
	        style="@style/LabelText"/>
	        
			</FrameLayout>
			</TableRow>
			
			<TableRow >
			<View
			android:layout_width="fill_parent"
	        android:layout_height="1px"
	        android:background="#FF909090" 
	        android:layout_weight="1"/>
	        </TableRow>
			
			
		</TableLayout>
		</LinearLayout>
		<TextView 
		android:id="@+id/infoTextview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/notification"
		android:layout_marginRight="15dip"
		android:layout_marginLeft="15dip"
		android:layout_marginBottom="15dip"
		android:layout_marginTop="20dip"/>
		
		
</LinearLayout>