<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/trophycase_pr_logo" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:padding="5dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/once_tap"
        android:textAppearance="@style/label_brown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:text="or"
        android:textAppearance="@style/label_brown" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/trophycase_longbrownbton"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="Sign up with Email"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/alreadyhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/already"
        android:textAppearance="@style/label_brown" />

    <TextView
        android:id="@+id/takeAPeek"
        style="@style/label_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/take_a_peek" />

    <ImageView
        android:id="@+id/whyregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/trophycase_whyregister_text" />

</LinearLayout>